- Added Cooldown Multiplier and Cooldown Max Sandbox options.
- Added check for ghost/invisible/dead for spawning / attraction system.
- Added protection to spawning zombies on water.
- Tied zombie count directly to spawned Zs.
- Added shop markers system. (Shops now appear marked on the map)
- Added death log as players die.
- Raised interval for attraction on players.
[ ------ ]

[ 7/22/25 ]
- Fixed shop-marker z-axis rendering.
- Added removal of all zombies in world when mode is started.
- Made the death-log ease-out fade slower.
- Added sound for player-deaths.
- Lowered the minimum of any sandbox times to 0.2 (11~ seconds)
- Redid wave logic to allow trickle-in spawning.
- Added extra sandbox options for trickle-in spawning.
[ ------ ]

[ 7/23/25 ]
- Added zombie-phasing when stuck. (Only applies when out of the zone.)
- Fixed issue with zombie removal at start of the mode.
- DEBUG: Added some debug-only test related features.
[ ------ ]

[ 7/23/25 - hotfix ]
- Further increased death-alert time.
- Re-added player-spotting.
[ ------ ]

[ 7/23/25 - hotfix 2 ]
- Fixed wave fraction.
- Re-added collide event to phasing.
- Made phasing much more aggressive. (May be intensive)
- Made the death-log last 30 seconds.
[ ------ ]

[ 7/24/25 ]
- Extended Phasing Requirement-Time.
  - Zombies phase when they're on the same square for too long. (was 50ms, now 100ms)
- Fixed/Changed the zombies-remaining total. (from toSpawn+spawned to toSpawn+current)
- Tweaked out-of-room shop-marker to be less transparent.
- Death-alert minimum fade to 40% (from 0%)
- Upped default sandbox wave-cooldown-multi to 1.05 (from 1.01)
- Upped default sandbox money-per-kill to $1.5 (from $1)
[ ------ ]

[ 7/24/25 - hotfix 1 ]
- Made phase-check work off timestamp rather than ticks.
  - (Now rather than "ticks", if the zombie is still for 5 seconds it phases to the zone.)
[ ------ ]

[ 7/25/25 ]
- New Art for posters, previews, and menu.
- Fixed issue in sandbox-panel with entry.
[ ------ ]